# ben-dev-au.github.io

./: CNAME  LICENSE  README.md  makefile  portfolio.db  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/: homepage.py  resume.py
backend/app/models/: contact_message.py  project.py
backend/app/services/: db.py
docs/: static-conversion-plan.md
frontend/static/css/: about.css  base.css  contact.css  index.css  intro.css  key-hints.css  mondrian.css  navbar.css  projects.css  timeline.css
frontend/static/js/: contact.js  gallery.js  key-hints.js  navbar.js  scroll.js  timeline.js
frontend/templates/: index.html
frontend/templates/components/: about.html  contact.html  intro.html  key-hints.html  navbar.html  projects.html  resume.html  scroll-top.html
frontend/templates/homepage/: index-depreciated.html  index.html
frontend/templates/resume/: resume.html
