[project]
name = "ben-dev-au-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "ben-dev-au"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "ben_dev_au"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
