[project]
name = "ben-dev-au-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "ben-dev-au"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi-csrf-protect (>=1.0.2,<2.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "ben_dev_au"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
